Minor fixes about overflowing tag icon in tag list

--- a/web/src/style.css
+++ b/web/src/style.css
@@ -496,6 +496,7 @@ nav {
   height: var(--header-size);
   width: var(--header-size);
   transform: translateY(10px);
+  clip-path: inset(0 0 10px 0);
   fill: var(--color-fg-secondary);
 }
 .tag-header:after {
